--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -72,7 +72,7 @@
     <p>{{ scholar.description }}</p>
     <!-- links -->
     {% for link in scholar.links %}
-    <a href="{{ link }}">{{ link }}</a>
+    <a href="{{ link }}">{{ link }}</a> <br>
     {% endfor %}
 
     <button
