--- a/app/templates/view/preferences.html
+++ b/app/templates/view/preferences.html
@@ -30,7 +30,7 @@
             <b>Maximum Cost</b><br>
             <div style="width: 16vw;" class="input-group">
                 <div class="input-group-prepend">
-                    <div class="input-group-text">$</div>
+                    <div class="input-group-text"><b>$</b></div>
                 </div>
                 <input type="number" class="form-control" name="maximum-cost" min=0 step=0.01 placeholder="Enter price"
                     {% if prefs['cost']|length == 1 %}
