--- a/app/templates/view/resources.html
+++ b/app/templates/view/resources.html
@@ -24,7 +24,7 @@
       <div class="d-flex flex-row justify-content-between">
         <span class="h5"><b>Refine Results</b></span>
         {% if body %}
-        <a class="btn btn-outline-danger btn-sm w-25" href="/opportunities">Clear</a>
+        <a class="btn btn-outline-danger btn-sm w-25" href="/scholarships">Clear</a>
         {% endif %}
       </div>
       <hr>
