Fix clear buttons for real this time

--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -27,7 +27,7 @@
       <div class="d-flex flex-row justify-content-between">
         <span class="h5"><b>Refine Results</b></span>
         {% if body %}
-        <a class="btn btn-outline-danger btn-sm w-25" href="/resources">Clear</a>
+        <a class="btn btn-outline-danger btn-sm w-25" href="/scholarships">Clear</a>
         {% endif %}
       </div>
       <hr>
