Fix text wrapping

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -108,7 +108,7 @@
                {% endfor %}
                {% if user.userType == "admin" or user.userType == "teacher" %}
                <div class="dropdown show d-inline">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a tabindex="-1" class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                          Create
                     </a>
 
