--- a/app/templates/view/scholarships.html
+++ b/app/templates/view/scholarships.html
@@ -54,7 +54,7 @@
 <!-- SCHOLARSHIPS (right) -->
 <div class="scholarships">
   {% for scholar in scholars %}
-  <div id="{{ scholar.scholarshipID }}" class="scholar-block">
+  <div id="{{ scholar.scholarshipID }}" class="scholar-block wrap">
     <br>
 
     <a href="/scholarships/{{ scholar.scholarshipID }}">
