--- a/app/templates/view/resources.html
+++ b/app/templates/view/resources.html
@@ -56,7 +56,7 @@
 <!-- RESOURCES (right) -->
 <div class="resources">
   {% for reso in res %}
-  <div id="{{ reso.resourceID }}" class="resource-block">
+  <div id="{{ reso.resourceID }}" class="resource-block wrap">
     <br>
     <a href="/resources/{{ reso.resourceID }}">
       <h3>{{ reso.title }}</h3>
@@ -67,7 +67,7 @@
     <p>{{ reso.description }}</p>
     <!-- links -->
     <a href="{{ reso.link }}">{{ reso.link }}</a> <br>
-    
+
     {% if user.userType == "admin" %}
     <a style="float: right; font-size: 20px; border: 0; padding-left: 1.5vw; background-color: transparent; outline: none;"
       class="text-secondary star" href="/resources/edit/{{ reso.resourceID }}">
